Fix drawer title alignment

--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -95,6 +95,7 @@ $backdrop-opacity: 1;
 
         .c-drawer__title {
             height: $title-height;
+            padding-bottom: 0;
             background-color: white;
             color: black;
 
